Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-88982

QSplashScreen missing QPainter::SmoothPixmapTransform

    XMLWordPrintable

Details

    • All
    • fdc687913df2dbd92c7469082690381fea55e628 (qt/qtbase/dev) 6c546342c2de23cb2061b78c422eb61a53ebf017 (qt/qtbase/6.0) 6c6e56c42028d5775a977b4be14a243b1d3deb0c (qt/qtbase/5.15)

    Description

      When a QSplashScreen is displayed on a screen with 150% scaling, the rendering of the @2x pixmap is bad.  Just adding this line:

      painter.setRenderHints(QPainter::SmoothPixmapTransform); 

      inside QSplashScreen::event

      solves the problem.

      Attachments

        For Gerrit Dashboard: QTBUG-88982
        # Subject Branch Project Status CR V

        Activity

          People

            qt.team.quick.subscriptions Qt Quick and Widgets Team
            jirauser26727 user-04d21 (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes