QSplashScreen: draw pixmap with SmoothTransfrom

Use high-quality scaling to improve rendering in cases
where the pixmap has to be scaled down, such as when
drawing a @2x pixmap at 150%.

Change-Id: I216b03b61dfa2cc2cc8c573e24a576424f6f5d17
Fixes: QTBUG-88982
Reviewed-by: Tor Arne Vestbø <tor.arne.vestbo@qt.io>
(cherry picked from commit fdc687913df2dbd92c7469082690381fea55e628)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>